updates added points to map

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="contact" content="">
     <meta name="url" content="">
     <meta name="creation-date" content="12/21/2015">
-    <meta name="revision-date" content="12/21/2015">
-    <meta name="version" content="1.0.0">
+    <meta name="revision-date" content="05/18/2016">
+    <meta name="version" content="1.2.0">
 
     <!-- Apple-Specific Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -68,7 +68,7 @@
           </div>
         </nav>
 
-        <div id="mapDiv"></div>
+        <div class="custom-popup" id="mapDiv"></div>
 
         <!-- About Modal -->
         <!--==============================================================-->
@@ -95,7 +95,9 @@
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-    <script src="data/gccDistricts.json"></script>
-    <!-- // <script src="data/azZips.json"></script> -->
+    <script src="data/APR2016/DISTRICT_APR2016.json"></script>
+    <script src="data/APR2016/CommunityPacks.json"></script>
+    <script src="data/APR2016/CommunityTroops.json"></script>
+    <script src="data/APR2016/CommunityCrews.json"></script>
     <script src="js/main.js"></script>
 </html>
