--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=9, IE=10">
 
-    <title>GCC | District Maps</title>
+    <title>GCC | Council Map</title>
 
     <meta name="description" content="Grand Canyon Council BSA Districts Map">
     <meta name="author" content="Vern Wolfley">
