--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="contact" content="">
     <meta name="url" content="">
     <meta name="creation-date" content="12/21/2015">
-    <meta name="revision-date" content="05/18/2016">
-    <meta name="version" content="1.2.0">
+    <meta name="revision-date" content="05/19/2016">
+    <meta name="version" content="1.3.0">
 
     <!-- Apple-Specific Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -99,5 +99,9 @@
     <script src="data/APR2016/CommunityPacks.json"></script>
     <script src="data/APR2016/CommunityTroops.json"></script>
     <script src="data/APR2016/CommunityCrews.json"></script>
+    <script src="data/APR2016/LDSCrews.geo.json"></script>
+    <script src="data/APR2016/LDSPacks.geo.json"></script>
+    <script src="data/APR2016/LDSTeams.geo.json"></script>
+    <script src="data/APR2016/LDSTroops.geo.json"></script>
     <script src="js/main.js"></script>
 </html>
