updating points to spider if stacked

--- a/index.html
+++ b/index.html
@@ -103,5 +103,6 @@
     <script src="data/APR2016/LDSPacks.geo.json"></script>
     <script src="data/APR2016/LDSTeams.geo.json"></script>
     <script src="data/APR2016/LDSTroops.geo.json"></script>
+    <script src="vendor/oms.min.js"></script>
     <script src="js/main.js"></script>
 </html>
